Docs: note that BMesh loops are accessed via faces

Resolves T48258